--- a/bundle.css
+++ b/bundle.css
@@ -16,3 +16,10 @@
     ._724994c5 .menu--open {
         max-height: 25rem;
     }
+._952d3baf .vh50 {
+        height: 50vh
+    }
+
+    ._952d3baf .vh100 {
+        height: 100vh
+    }
